<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>311</width>
    <height>171</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>GetColor</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <widget class="QWidget" name="mColorView" native="true">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>40</y>
      <width>60</width>
      <height>60</height>
     </rect>
    </property>
    <property name="mouseTracking">
     <bool>false</bool>
    </property>
    <property name="styleSheet">
     <string notr="true">QWidget#mColorView {
	border: 2px solid rgb(199, 192, 255)
}</string>
    </property>
   </widget>
   <widget class="QLabel" name="mLable_PreviweColor">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>20</y>
      <width>53</width>
      <height>15</height>
     </rect>
    </property>
    <property name="text">
     <string>预览</string>
    </property>
   </widget>
   <widget class="QLabel" name="mLable_RGB">
    <property name="geometry">
     <rect>
      <x>80</x>
      <y>10</y>
      <width>53</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>RGB:</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="mRGBA">
    <property name="geometry">
     <rect>
      <x>130</x>
      <y>40</y>
      <width>111</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="readOnly">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="mPickUpColor">
    <property name="geometry">
     <rect>
      <x>162</x>
      <y>130</y>
      <width>141</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>拾取屏幕颜色</string>
    </property>
   </widget>
   <widget class="QLabel" name="mLabel_RGBA">
    <property name="geometry">
     <rect>
      <x>80</x>
      <y>40</y>
      <width>51</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>RGB(A):</string>
    </property>
   </widget>
   <widget class="QLabel" name="mLabel_HEX">
    <property name="geometry">
     <rect>
      <x>80</x>
      <y>70</y>
      <width>53</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>HEX:</string>
    </property>
   </widget>
   <widget class="QLabel" name="mLabel_HEXA">
    <property name="geometry">
     <rect>
      <x>80</x>
      <y>100</y>
      <width>53</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string>HEX(A):</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="mHEXA">
    <property name="geometry">
     <rect>
      <x>130</x>
      <y>100</y>
      <width>111</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="readOnly">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="mHEX">
    <property name="geometry">
     <rect>
      <x>130</x>
      <y>70</y>
      <width>111</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="readOnly">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QLineEdit" name="mRGB">
    <property name="geometry">
     <rect>
      <x>130</x>
      <y>10</y>
      <width>111</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="readOnly">
     <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="mRGB_Copy">
    <property name="geometry">
     <rect>
      <x>240</x>
      <y>10</y>
      <width>51</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>拷贝</string>
    </property>
   </widget>
   <widget class="QPushButton" name="mHEX_Copy">
    <property name="geometry">
     <rect>
      <x>240</x>
      <y>70</y>
      <width>51</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>拷贝</string>
    </property>
   </widget>
   <widget class="QPushButton" name="mRGBA_Copy">
    <property name="geometry">
     <rect>
      <x>240</x>
      <y>40</y>
      <width>51</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>拷贝</string>
    </property>
   </widget>
   <widget class="QPushButton" name="mHEXA_Copy">
    <property name="geometry">
     <rect>
      <x>240</x>
      <y>100</y>
      <width>51</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>拷贝</string>
    </property>
   </widget>
   <widget class="QPushButton" name="mOpenColorSelect">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>130</y>
      <width>141</width>
      <height>31</height>
     </rect>
    </property>
    <property name="text">
     <string>拾色器</string>
    </property>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
